--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,4 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: cargo test
-              run: cargo test
-    # uncomment to enable clippy lints
-    # clippy:
-    #     runs-on: ubuntu-latest
-    #     name: Lint (clippy)
-    #     steps:
-    #         - uses: actions/checkout@v3
-    #         - name: cargo clippy
-    #           run: cargo clippy -- -D warnings
-    # uncoment to enable format checking
-    # fmt:
-    #     runs-on: ubuntu-latest
-    #     name: Format
-    #     steps:
-    #         - uses: actions/checkout@v3
-    #         - name: cargo fmt
-    #           run: cargo fmt --check
+              run: cargo test test_part
