--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 default-run = "advent_of_code"
 publish = false
 
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+
 [dependencies]
 pico-args = "0.5.0"
 regex = "1.7.0"
