--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ publish = false
 
 [profile.release]
 lto = true
-codegen-units = 1
 panic = "abort"
+debug = true
+
+[profile.bench]
+debug = false
 
 [dependencies]
 pico-args = "0.5.0"
