--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ pico-args = "0.5.0"
 regex = "1.7.0"
 lazy_static = "1.4.0"
 bucket_queue = "2.0.0"
+z3 = {version="0.11.2", features = ["static-link-z3"]}
